# Integrated_analytics_platform_for_marketplaces

./: docker-compose.yml
backend/: config.py  main.py  pyproject.toml
backend/app/: run.py
backend/app/database/: __init__.py  database.py
backend/app/database/alembic/: env.py
backend/app/database/alembic/versions/: 99b6a1ab664f_initial_migration_create_tables.py
backend/app/models/: __init__.py  campaign.py  category.py  order.py  product.py
backend/app/repositories/: __init__.py  campaign_repo.py  category_repo.py  order_repo.py  product_repo.py
backend/app/schemas/: campaign.py  category.py  order.py  product.py
backend/mock_data/: generator.py  seed.py
